#develop refactoring in the menu

--- a/src/layout/Menu/style/menu-style.scss
+++ b/src/layout/Menu/style/menu-style.scss
@@ -1,11 +1,11 @@
 // SCSS contains style menu
-.titleMenu {
+.menu-title {
     display: absolute;
 }
-#iconMenu {
+.menu-icon {
     margin-top: -2em;
     text-align: right;
 }
-.textMenuHidden {
+.hidden-menu-text {
     visibility: hidden;
 }
